<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".activities.WorkoutsActivity">

    <RelativeLayout
        android:id="@+id/main_heading"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/info_btn"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="13dp"
            android:contentDescription="@string/information_button"
            android:src="@drawable/ic_information" />

        <TextView
            android:id="@+id/heading_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="14dp"
            android:layout_marginEnd="14dp"
            android:layout_toEndOf="@+id/info_btn"
            android:layout_toStartOf="@+id/timer_img"
            android:text="@string/workout_timer"
            android:textColor="@color/snow"
            android:textSize="35sp" />

        <ImageView
            android:id="@+id/timer_img"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="13dp"
            android:contentDescription="@string/timer_icon"
            android:src="@drawable/ic_stopwatch_rush" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/workout_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="74dp"
            android:layout_toStartOf="@+id/create_btn"
            android:paddingTop="7dp"
            android:text="@string/workouts"
            android:textColor="@color/black"
            android:textSize="27sp" />

        <ImageView
            android:id="@+id/create_btn"
            android:layout_width="30dp"
            android:layout_height="34dp"
            android:layout_alignParentEnd="true"
            android:layout_centerHorizontal="true"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="6dp"
            android:contentDescription="@string/create_button"
            android:src="@drawable/ic_add" />


    </RelativeLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:layoutAnimation="@anim/layout_animate_from_bottom" />

</LinearLayout>