<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateWorkoutActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_btn_cw"
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="13dp"
            android:contentDescription="@string/back_button"
            android:src="@drawable/ic_back" />

        <ImageView
            android:id="@+id/timer_img"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="13dp"
            android:contentDescription="@string/timer_icon"
            android:src="@drawable/ic_stopwatch_rush" />

        <TextView
            android:id="@+id/heading_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/workout_timer"
            android:textColor="@color/snow"
            android:textSize="35sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <!--    <TextView-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="4dp"-->
<!--        android:text="@string/exercises"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/exercises_count_txt"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.127"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <TextView-->
<!--        android:id="@+id/exercises_count_txt"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="132dp"-->
<!--        android:text="5"-->
<!--        android:textSize="20sp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.184"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/header" />-->

    <!--    <TextView-->
<!--        android:id="@+id/textView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="4dp"-->
<!--        android:text="@string/duration"-->
<!--        app:layout_constraintBottom_toTopOf="@+id/duration_count_txt"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.914"-->
<!--        app:layout_constraintStart_toStartOf="parent" />-->

<!--    <TextView-->
<!--        android:id="@+id/duration_count_txt"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="132dp"-->
<!--        android:text="05:00"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.888"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/header" />-->

    <RelativeLayout
        android:id="@+id/workout_count_relative"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/exercises_count_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="94dp"
            android:layout_toStartOf="@+id/duration_count_title"
            android:text="@string/exercises"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/exercises_count_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/exercises_count_title"
            android:layout_alignStart="@+id/exercises_count_title"
            android:layout_alignEnd="@+id/exercises_count_title"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/_0"
            android:textSize="20sp" />


        <TextView
            android:id="@+id/duration_count_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:text="@string/duration"
            android:textSize="20sp"
            android:layout_alignParentEnd="true"
         />

        <TextView
            android:id="@+id/duration_count_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/exercises_count_title"
            android:layout_alignStart="@+id/duration_count_title"
            android:layout_alignEnd="@+id/duration_count_title"
            android:layout_marginTop="4dp"
            android:gravity="center"
            android:text="@string/_0min"
            android:textSize="20sp"
            />


    </RelativeLayout>

    <EditText
        android:id="@+id/workout_title_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/black"
        android:ems="8"
        android:hint="@string/workout_title"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_name"
        app:layout_constraintBottom_toTopOf="@+id/name_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:ems="10"
        android:hint="@string/exercise_name"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <Button
        android:id="@+id/duration_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="57dp"
        android:text="@string/duration"
        app:layout_constraintBottom_toTopOf="@+id/add_exercise_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input" />

    <Button
        android:id="@+id/add_exercise_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="68dp"
        android:text="@string/add_exercise"
        app:layout_constraintBottom_toTopOf="@+id/save_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/save_workout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>